--- a/ProLink.ipynb
+++ b/ProLink.ipynb
@@ -2,8 +2,7 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-      },
+      "metadata": {},
       "source": [
         " \n",
         "#<font color='yellow'>***/***</font> ***ProLink*** <font color='yellow'>***/***</font>  \n",
@@ -28,6 +27,9 @@
         "%%capture\n",
         "\n",
         "import os\n",
+        "\n",
+        "from google.colab import files\n",
+        "\n",
         "\n",
         "!wget https://github.com/marbl/Mash/releases/download/v2.3/mash-Linux64-v2.3.tar \n",
         "!tar -xvf mash-Linux64-v2.3.tar \n",
@@ -59,8 +61,7 @@
         "\n",
         "%pip install -r ProLink/requirements.txt\n",
         "\n",
-        "from ProLink.Main import pro_link\n",
-        "from google.colab import files"
+        "from ProLink.Prolink import pro_link"
       ]
     },
     {
@@ -73,72 +74,49 @@
       "source": [
         "#@title Introduce the parameters { run: \"auto\" }\n",
         "\n",
-        "import configparser\n",
-        "\n",
-        "config = configparser.ConfigParser()\n",
-        "config.read(\"/content/ProLink/parameters.cfg\")\n",
-        "\n",
         "parameters = {}\n",
-        "for section in config.sections():\n",
-        "    parameters[section] = {}\n",
-        "    for option in config.options(section):\n",
-        "        parameters[section][option] = config.get(section, option)\n",
-        "\n",
         "\n",
         "#@markdown ----QUERY PROTEINS UNIPROT CODES----\n",
         "query_proteins = \"ABQ62066.1, ABQ62091.1, ABQ62490.1\" #@param {type:\"string\"}\n",
         "\n",
         "#@markdown ----BLAST PARAMETERS----\n",
         "hitlist_range = 5000 #@param {type:\"number\"}\n",
-        "up = {'hitlist_range': hitlist_range}\n",
-        "parameters['Blast'].update(up)\n",
+        "parameters['hitlist_range'] = hitlist_range\n",
         "\n",
         "blast_database = \"Reference Proteins (refseq_protein)\" #@param [\"Non redundant protein sequences (nr)\", \"Reference Proteins (refseq_protein)\", \"Model organisms (landmark)\", \"Protein Data Bank proteins (pdb)\"]\n",
-        "blast_database = blast_database.split('(')[1].split(')')[0] # database name between parenthesis\n",
-        "\n",
-        "up = {'blast_database': blast_database}\n",
-        "parameters['Blast'].update(up)\n",
+        "parameters['blast_database'] = blast_database.split('(')[1].split(')')[0] # database name between parenthesis\n",
         "\n",
         "smart_blast_ = False #@param {type:\"boolean\"}\n",
-        "up = {'smart_blast_': smart_blast_}\n",
-        "parameters['Blast'].update(up)\n",
+        "parameters['smart_blast_'] = smart_blast_\n",
         "\n",
         "#@markdown ----CLUSTERING----\n",
         "cluster_seqs = True #@param {type:\"boolean\"}\n",
-        "up = {'cluster_seqs': cluster_seqs}\n",
-        "parameters['Clustering'].update(up)\n",
+        "parameters['cluster_seqs'] = cluster_seqs\n",
         "\n",
         "similarity = 0.5 #@param {type:\"number\"} #Initial similarity treshold to group the sequences into clusters.\n",
-        "up = {'similarity': similarity}\n",
-        "parameters['Clustering'].update(up)\n",
+        "parameters['similarity'] = similarity\n",
         "\n",
         "smart_clustering_ = True #@param {type:\"boolean\"}\n",
-        "up = {'smart_clustering_': smart_clustering_}\n",
-        "parameters['Clustering'].update(up)\n",
+        "parameters['smart_clustering_'] = smart_clustering_\n",
         "\n",
         "#@markdown ----PFAM DOMAINS----\n",
         "check_pfam_domains = True #@param {type:\"boolean\"}\n",
-        "up = {'check_pfam_domains': check_pfam_domains}\n",
-        "parameters['Pfam domains'].update(up)\n",
+        "parameters['check_pfam_domains'] = check_pfam_domains\n",
         "\n",
         "#@markdown ----ALIGNMENT----\n",
         "align_seqs = True #@param {type:\"boolean\"}\n",
-        "up = {'align_seqs': align_seqs}\n",
-        "parameters['Alignment'].update(up)\n",
+        "parameters['align_seqs'] = align_seqs\n",
         "\n",
         "#@markdown ----SEQUENCE LOGO GENERATION----\n",
         "generate_logo = True #@param {type:\"boolean\"}\n",
-        "up = {'generate_logo': generate_logo}\n",
-        "parameters['Weblogo'].update(up)\n",
+        "parameters['generate_logo'] = generate_logo\n",
         "\n",
         "#@markdown ----PHYLOGENETIC TREE GENERATION----\n",
         "generate_tree = True #@param {type:\"boolean\"}\n",
-        "up = {'generate_tree': generate_tree}\n",
-        "parameters['Tree'].update(up)\n",
+        "parameters['generate_tree'] = generate_tree\n",
         "\n",
         "tree_type = \"NJ\" #@param [\"NJ\", \"ML\"]\n",
-        "up = {'tree_type': tree_type}\n",
-        "parameters['Tree'].update(up)\n",
+        "parameters['tree_type'] = tree_type\n",
         "\n",
         "#@markdown For more advanced options, please feel free to edit the ProLink/parameters.cfg file."
       ]
@@ -203,7 +181,12 @@
     },
     "language_info": {
       "name": "python",
-      "version": "3.10.6"
+      "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+      }
     }
   },
   "nbformat": 4,
