Simpler environment install

--- a/ProLink.ipynb
+++ b/ProLink.ipynb
@@ -28,40 +28,23 @@
         "\n",
         "import os\n",
         "\n",
-        "from google.colab import files\n",
+        "! apt-get update\n",
+        "! wget https://www.megasoftware.net/do_force_download/megax-cc_10.2.6-1_amd64.deb\n",
+        "! apt-get install -y ghostscript mash muscle ./megax-cc_10.2.6-1_amd64.deb\n",
         "\n",
-        "\n",
-        "!wget https://github.com/marbl/Mash/releases/download/v2.3/mash-Linux64-v2.3.tar \n",
-        "!tar -xvf mash-Linux64-v2.3.tar \n",
-        "\n",
-        "!mv /content/mash-Linux64-v2.3 /content/mashdir\n",
-        "os.environ['PATH'] += \":/content/mashdir\"\n",
-        "\n",
-        "!wget https://github.com/soedinglab/MMseqs2/releases/download/14-7e284/mmseqs-linux-avx2.tar.gz \n",
-        "!tar -xzf mmseqs-linux-avx2.tar.gz \n",
+        "! wget https://github.com/soedinglab/MMseqs2/releases/download/14-7e284/mmseqs-linux-avx2.tar.gz\n",
+        "! tar -xzf mmseqs-linux-avx2.tar.gz\n",
         "os.environ['PATH'] += \":/content/mmseqs/bin\"\n",
         "\n",
-        "!git clone https://github.com/unizar-flav/ALFATClust.git \n",
+        "! git clone https://github.com/unizar-flav/ALFATClust.git\n",
         "os.environ['PATH'] += \":/content/ALFATClust/main\"\n",
         "\n",
-        "!wget https://github.com/rcedgar/muscle/releases/download/v5.1/muscle5.1.linux_intel64 \n",
-        "!mv /content/muscle5.1.linux_intel64 /content/muscle\n",
-        "!chmod +x /content/muscle\n",
-        "os.environ['PATH'] += \":/content\"\n",
+        "%pip install biopython python-igraph leidenalg weblogo\n",
+        "%pip install git+https://github.com/unizar-flav/ProLink.git\n",
         "\n",
-        "!apt-get update\n",
-        "!apt-get install ghostscript\n",
-        "\n",
-        "!wget https://www.megasoftware.net/do_force_download/megax-cc_10.2.6-1_amd64.deb \n",
-        "!apt-get remove -y --purge man-db \n",
-        "!dpkg -i megax-cc_10.2.6-1_amd64.deb \n",
-        "!apt --fix-broken install  \n",
-        "\n",
-        "!git clone https://github.com/unizar-flav/ProLink.git\n",
-        "\n",
-        "%pip install -r ProLink/requirements.txt\n",
-        "\n",
-        "from ProLink.Prolink import pro_link"
+        "from datetime import datetime\n",
+        "from google.colab import files\n",
+        "from ProLink import pro_link"
       ]
     },
     {
@@ -131,8 +114,6 @@
       "source": [
         "#@title Execute the script\n",
         "#@markdown This may take a while\n",
-        "\n",
-        "from datetime import datetime\n",
         "\n",
         "now = str(datetime.now()).replace(\" \", \"_\")\n",
         "outputs_dir = \"outputs_\" + str(now)\n",
