Fix output directory parameter

--- a/ProLink.ipynb
+++ b/ProLink.ipynb
@@ -55,7 +55,7 @@
       },
       "outputs": [],
       "source": [
-        "#@title Introduce the parameters { run: \"auto\" }\n",
+        "#@title Introduce the parameters\n",
         "\n",
         "parameters = dict()\n",
         "\n",
@@ -120,13 +120,12 @@
         "\n",
         "now = str(datetime.now()).replace(\" \", \"_\")\n",
         "outputs_dir = f\"outputs_{now}\"\n",
-        "up = {'outputs_dir': outputs_dir}\n",
-        "parameters['Outputs'].update(up)\n",
+        "parameters['outputs_dir'] = outputs_dir\n",
         "print(now)\n",
         "print(parameters)\n",
         "download_outputs = True #@param {type:\"boolean\"}\n",
         "\n",
-        "pro_link(query_proteins, **parameters) \n",
+        "pro_link(query_proteins, **parameters)\n",
         "\n",
         "if download_outputs:\n",
         "  downloadfile = f\"/content/{outputs_dir}\"\n",
