Fix downloading of results

--- a/ProLink.ipynb
+++ b/ProLink.ipynb
@@ -118,20 +118,20 @@
         "#@title Execute the script\n",
         "#@markdown Running the clustering (This may take a while)\n",
         "\n",
-        "now = str(datetime.now()).replace(\" \", \"_\")\n",
+        "download_outputs = True #@param {type:\"boolean\"}\n",
+        "\n",
+        "now = datetime.now().strftime(\"%Y%m%d-%H.%M.%S\")\n",
         "outputs_dir = f\"outputs_{now}\"\n",
+        "outputs_zip = f\"ProLink_{outputs_dir}.zip\"\n",
         "parameters['outputs_dir'] = outputs_dir\n",
         "print(now)\n",
         "print(parameters)\n",
-        "download_outputs = True #@param {type:\"boolean\"}\n",
         "\n",
         "pro_link(query_proteins, **parameters)\n",
         "\n",
+        "! zip -r $outputs_zip /content/${outputs_dir}\n",
         "if download_outputs:\n",
-        "  downloadfile = f\"/content/{outputs_dir}\"\n",
-        "  output_filename = f\"ProLink_{outputs_dir}.zip\"\n",
-        "  os.system(f\"zip -r {output_filename} {downloadfile}\")\n",
-        "  files.download( output_filename )"
+        "    files.download(outputs_zip)"
       ]
     },
     {
@@ -142,13 +142,10 @@
       },
       "outputs": [],
       "source": [
-        "#@title (Optional)  Download outputs manually { display-mode: \"form\" }\n",
-        "#@markdown Copy the path of the file/directory below and run the cell to download.\n",
-        "downloadfile = \"\" #@param {type: \"string\"}\n",
+        "#@title (Optional)  Download outputs manually\n",
+        "#@markdown Run the cell to download the results as a zip.\n",
         "\n",
-        "output_filename = 'ProLink_outputs.zip'\n",
-        "os.system(f\"zip -r {output_filename} {downloadfile}\")\n",
-        "files.download( output_filename )"
+        "files.download(outputs_zip)"
       ]
     }
   ],
