--- a/ProLink.ipynb
+++ b/ProLink.ipynb
@@ -30,7 +30,12 @@
         "\n",
         "! apt-get update\n",
         "! wget https://www.megasoftware.net/do_force_download/megax-cc_10.2.6-1_amd64.deb\n",
-        "! apt-get install -y ghostscript mash muscle ./megax-cc_10.2.6-1_amd64.deb\n",
+        "! apt-get install -y ghostscript mash ./megax-cc_10.2.6-1_amd64.deb\n",
+        "\n",
+        "! wget https://github.com/rcedgar/muscle/releases/download/v5.1/muscle5.1.linux_intel64\n",
+        "! mv /content/muscle5.1.linux_intel64 /content/muscle\n",
+        "! chmod +x /content/muscle\n",
+        "os.environ['PATH'] += ":/content"\n",
         "\n",
         "! wget https://github.com/soedinglab/MMseqs2/releases/download/14-7e284/mmseqs-linux-avx2.tar.gz\n",
         "! tar -xzf mmseqs-linux-avx2.tar.gz\n",
