--- a/ProLink.ipynb
+++ b/ProLink.ipynb
@@ -28,20 +28,19 @@
         "\n",
         "import os\n",
         "\n",
-        "! apt-get update\n",
-        "! wget https://www.megasoftware.net/do_force_download/megax-cc_10.2.6-1_amd64.deb\n",
-        "! apt-get install -y ghostscript mash ./megax-cc_10.2.6-1_amd64.deb\n",
+        "!apt-get update\n",
+        "!wget https://www.megasoftware.net/do_force_download/megax-cc_10.2.6-1_amd64.deb\n",
+        "!apt-get install -y ghostscript mash ./megax-cc_10.2.6-1_amd64.deb\n",
         "\n",
-        "!wget https://github.com/rcedgar/muscle/releases/download/v5.1/muscle5.1.linux_intel64 \n",
-        "! mv /content/muscle5.1.linux_intel64 /content/muscle\n",
-        "! chmod +x /content/muscle\n",
+        "!wget -O /content/muscle https://github.com/rcedgar/muscle/releases/download/v5.1/muscle5.1.linux_intel64\n",
+        "!chmod +x /content/muscle\n",
         "os.environ['PATH'] += \":/content\"\n",
         "\n",
-        "! wget https://github.com/soedinglab/MMseqs2/releases/download/14-7e284/mmseqs-linux-avx2.tar.gz\n",
-        "! tar -xzf mmseqs-linux-avx2.tar.gz\n",
+        "!wget https://github.com/soedinglab/MMseqs2/releases/download/14-7e284/mmseqs-linux-avx2.tar.gz\n",
+        "!tar -xzf mmseqs-linux-avx2.tar.gz\n",
         "os.environ['PATH'] += \":/content/mmseqs/bin\"\n",
         "\n",
-        "! git clone https://github.com/unizar-flav/ALFATClust.git\n",
+        "!git clone https://github.com/unizar-flav/ALFATClust.git\n",
         "os.environ['PATH'] += \":/content/ALFATClust/main\"\n",
         "\n",
         "%pip install biopython python-igraph leidenalg weblogo\n",
@@ -106,8 +105,8 @@
         "tree_type = \"NJ\" #@param [\"NJ\", \"ML\"]\n",
         "parameters['tree_type'] = tree_type\n",
         "\n",
-        "boostrap_replications = \"250\" #@param [\"100\", \"250\", \"500\", \"1000\", \"2000\", \"5000\"]\n",
-        "parameters['boostrap_replications'] = boostrap_replications\n",
+        "bootstrap_replications = \"250\" #@param [\"100\", \"250\", \"500\", \"1000\", \"2000\", \"5000\"]\n",
+        "parameters['boostrap_replications'] = bootstrap_replications\n",
         "\n",
         "#@markdown For more advanced options, please feel free to edit the ProLink/parameters.cfg file."
       ]
