Fixed cell 3 markdown

--- a/ProLink.ipynb
+++ b/ProLink.ipynb
@@ -120,7 +120,7 @@
       "outputs": [],
       "source": [
         "#@title Execute the script\n",
-        "#@markdown Running the clustering (This may take a while)\n",
+        "#@markdown Running the script (This may take a while)\n",
         "\n",
         "download_outputs = True #@param {type:\"boolean\"}\n",
         "\n",
