Change 'obtain_fasta_file' for 'get_seq'

--- a/ProLink.ipynb
+++ b/ProLink.ipynb
@@ -16,9 +16,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
-        "id": "XC1R9_cdk55M"
+        "cellView": "form"
       },
       "outputs": [],
       "source": [
@@ -63,8 +63,9 @@
         "\n",
         "parameters = dict()\n",
         "\n",
-        "#@markdown ----QUERY PROTEINS UNIPROT CODES----\n",
+        "#@markdown ----QUERY PROTEINS (UNIPROT CODES, COMMA SEPARATED)----\n",
         "query_proteins = \"ABQ62066.1, ABQ62091.1, ABQ62490.1\" #@param {type:\"string\"}\n",
+        "query_proteins = query_proteins.replace(' ', '').split(',')\n",
         "\n",
         "#@markdown ----BLAST PARAMETERS----\n",
         "hitlist_range = 5000 #@param {type:\"integer\"}\n",
