Change 'hitlist_range' to 'hitlist_size'

--- a/ProLink.ipynb
+++ b/ProLink.ipynb
@@ -1,6 +1,7 @@
 {
   "cells": [
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -68,8 +69,8 @@
         "query_proteins = query_proteins.replace(' ', '').split(',')\n",
         "\n",
         "#@markdown ----BLAST PARAMETERS----\n",
-        "hitlist_range = 5000 #@param {type:\"integer\"}\n",
-        "parameters['hitlist_range'] = hitlist_range\n",
+        "hitlist_size = 5000 #@param {type:\"integer\"}\n",
+        "parameters['hitlist_size'] = hitlist_size\n",
         "\n",
         "blast_database = \"Reference Proteins (refseq_protein)\" #@param [\"Non redundant protein sequences (nr)\", \"Reference Proteins (refseq_protein)\", \"Model organisms (landmark)\", \"Protein Data Bank proteins (pdb)\"]\n",
         "parameters['blast_database'] = blast_database.split('(')[1].split(')')[0] # database name between parenthesis\n",
