Change default parameters to YAML file

--- a/ProLink.ipynb
+++ b/ProLink.ipynb
@@ -110,7 +110,7 @@
         "bootstrap_replications = \"250\" #@param [\"100\", \"250\", \"500\", \"1000\", \"2000\", \"5000\"]\n",
         "parameters['boostrap_replications'] = bootstrap_replications\n",
         "\n",
-        "#@markdown For more advanced options, please feel free to edit the ProLink/parameters.cfg file."
+        "#@markdown For more advanced options, please feel free to edit the ProLink/parameters.yaml file."
       ]
     },
     {
