Fix manual download of results

--- a/ProLink.ipynb
+++ b/ProLink.ipynb
@@ -135,7 +135,7 @@
         "\n",
         "pro_link(query_proteins, **parameters)\n",
         "\n",
-        "! zip -r $outputs_zip /content/${outputs_dir}\n",
+        "! zip -r $outputs_zip /content/$outputs_dir\n",
         "if download_outputs:\n",
         "    files.download(outputs_zip)"
       ]
@@ -151,6 +151,7 @@
         "#@title (Optional)  Download outputs manually\n",
         "#@markdown Run the cell to download the results as a zip.\n",
         "\n",
+        "! zip -r $outputs_zip /content/$outputs_dir\n",
         "files.download(outputs_zip)"
       ]
     }
