--- a/ProLink.ipynb
+++ b/ProLink.ipynb
@@ -130,12 +130,11 @@
         "outputs_dir = f\"outputs_{now}\"\n",
         "outputs_zip = f\"ProLink_{outputs_dir}.zip\"\n",
         "parameters['outputs_dir'] = outputs_dir\n",
-        "print(now)\n",
-        "print(parameters)\n",
         "\n",
         "pro_link(query_proteins, **parameters)\n",
         "\n",
-        "! zip -r $outputs_zip /content/$outputs_dir\n",
+        "!mv ProLink.log /content/$outputs_dir 2>/dev/null\n",
+        "!zip -r $outputs_zip /content/$outputs_dir\n",
         "if download_outputs:\n",
         "    files.download(outputs_zip)"
       ]
@@ -151,7 +150,8 @@
         "#@title (Optional)  Download outputs manually\n",
         "#@markdown Run the cell to download the results as a zip.\n",
         "\n",
-        "! zip -r $outputs_zip /content/$outputs_dir\n",
+        "!mv ProLink.log /content/$outputs_dir 2>/dev/null\n",
+        "!zip -r $outputs_zip /content/$outputs_dir\n",
         "files.download(outputs_zip)"
       ]
     }
