Fix logging in Google Colab

--- a/ProLink.ipynb
+++ b/ProLink.ipynb
@@ -47,6 +47,7 @@
         "%pip install biopython python-igraph leidenalg weblogo\n",
         "%pip install git+https://github.com/unizar-flav/ProLink.git\n",
         "\n",
+        "import logging\n",
         "from datetime import datetime\n",
         "from google.colab import files\n",
         "from ProLink import pro_link"
@@ -125,15 +126,27 @@
         "#@markdown Running the script (This may take a while)\n",
         "\n",
         "download_outputs = True #@param {type:\"boolean\"}\n",
+        "extra_verbose = False #@param {type:\"boolean\"}\n",
         "\n",
         "now = datetime.now().strftime(\"%Y%m%d-%H.%M.%S\")\n",
         "outputs_dir = f\"outputs_{now}\"\n",
         "outputs_zip = f\"ProLink_{outputs_dir}.zip\"\n",
         "parameters['outputs_dir'] = outputs_dir\n",
         "\n",
+        "# re-configure logging to override colab settings\n",
+        "logging.basicConfig(\n",
+        "    level = logging.DEBUG if extra_verbose else logging.INFO,\n",
+        "    format = '%(message)s',\n",
+        "    handlers = [\n",
+        "        logging.FileHandler('{outputs_dir}/ProLink.log', mode='w'),\n",
+        "        logging.StreamHandler()\n",
+        "        ],\n",
+        "    force = True\n",
+        "    )\n",
+        "\n",
+        "# main script\n",
         "pro_link(query_proteins, **parameters)\n",
         "\n",
-        "!mv ProLink.log /content/$outputs_dir 2>/dev/null\n",
         "!zip -r $outputs_zip /content/$outputs_dir\n",
         "if download_outputs:\n",
         "    files.download(outputs_zip)"
@@ -150,7 +163,6 @@
         "#@title (Optional)  Download outputs manually\n",
         "#@markdown Run the cell to download the results as a zip.\n",
         "\n",
-        "!mv ProLink.log /content/$outputs_dir 2>/dev/null\n",
         "!zip -r $outputs_zip /content/$outputs_dir\n",
         "files.download(outputs_zip)"
       ]
