Fix log file location

--- a/ProLink.ipynb
+++ b/ProLink.ipynb
@@ -134,11 +134,12 @@
         "parameters['outputs_dir'] = outputs_dir\n",
         "\n",
         "# re-configure logging to override colab settings\n",
+        "os.makedirs(outputs_dir, exist_ok=True)\n",
         "logging.basicConfig(\n",
         "    level = logging.DEBUG if extra_verbose else logging.INFO,\n",
         "    format = '%(message)s',\n",
         "    handlers = [\n",
-        "        logging.FileHandler('{outputs_dir}/ProLink.log', mode='w'),\n",
+        "        logging.FileHandler(f'{outputs_dir}/ProLink.log', mode='w'),\n",
         "        logging.StreamHandler()\n",
         "        ],\n",
         "    force = True\n",
