Increase 'pro clustering' tunning and fix converge

--- a/ProLink.ipynb
+++ b/ProLink.ipynb
@@ -89,6 +89,15 @@
         "pro_clustering_ = True #@param {type:\"boolean\"}\n",
         "parameters['pro_clustering_'] = pro_clustering_\n",
         "\n",
+        "similarity_step = 0.05 #@param {type:\"number\"} #Step to increase or decrease the similarity threshold\n",
+        "parameters['similarity_step'] = similarity_step\n",
+        "\n",
+        "min_number_of_clusters_to_cluster_again = 50 #@param {type:\"integer\"}\n",
+        "parameters['min_number_of_clusters_to_cluster_again'] = min_number_of_clusters_to_cluster_again\n",
+        "\n",
+        "max_number_of_clusters_to_cluster_again = 300 #@param {type:\"integer\"}\n",
+        "parameters['max_number_of_clusters_to_cluster_again'] = max_number_of_clusters_to_cluster_again\n",
+        "\n",
         "#@markdown ----PFAM DOMAINS----\n",
         "check_pfam_domains = True #@param {type:\"boolean\"}\n",
         "parameters['check_pfam_domains'] = check_pfam_domains\n",
