Fix zip downloading to once

--- a/ProLink.ipynb
+++ b/ProLink.ipynb
@@ -134,7 +134,6 @@
         "#@title Execute the script\n",
         "#@markdown Running the script (This may take a while)\n",
         "\n",
-        "download_outputs = True #@param {type:\"boolean\"}\n",
         "extra_verbose = False #@param {type:\"boolean\"}\n",
         "\n",
         "now = datetime.now().strftime(\"%Y%m%d-%H.%M.%S\")\n",
@@ -155,11 +154,7 @@
         "    )\n",
         "\n",
         "# main script\n",
-        "pro_link(query_proteins, **parameters)\n",
-        "\n",
-        "!zip -r $outputs_zip /content/$outputs_dir\n",
-        "if download_outputs:\n",
-        "    files.download(outputs_zip)"
+        "pro_link(query_proteins, **parameters)"
       ]
     },
     {
@@ -170,10 +165,10 @@
       },
       "outputs": [],
       "source": [
-        "#@title (Optional)  Download outputs manually\n",
-        "#@markdown Run the cell to download the results as a zip.\n",
+        "#@title Download outputs\n",
+        "#@markdown Run the cell to download the results as a zip\n",
         "\n",
-        "!zip -r $outputs_zip /content/$outputs_dir\n",
+        "!zip -r $outputs_zip $outputs_dir\n",
         "files.download(outputs_zip)"
       ]
     }
