Add length restriction options

--- a/ProLink.ipynb
+++ b/ProLink.ipynb
@@ -79,6 +79,12 @@
         "pro_blast_ = False #@param {type:\"boolean\"}\n",
         "parameters['pro_blast_'] = pro_blast_\n",
         "\n",
+        "length_restrict = False #@param {type:\"boolean\"}\n",
+        "parameters['restrict_length'] = length_restrict\n",
+        "\n",
+        "length_margin = 0.5 #@param {type:\"number\"}\n",
+        "parameters['length_margin'] = length_margin\n",
+        "\n",
         "#@markdown ----CLUSTERING----\n",
         "cluster_seqs = True #@param {type:\"boolean\"}\n",
         "parameters['cluster_seqs'] = cluster_seqs\n",
