Add alignment trimming with ClipKIT

--- a/ProLink.ipynb
+++ b/ProLink.ipynb
@@ -112,6 +112,9 @@
         "align_seqs = True #@param {type:\"boolean\"}\n",
         "parameters['align_seqs'] = align_seqs\n",
         "\n",
+        "trim = False #@param {type:\"boolean\"}\n",
+        "parameters['trim'] = trim\n",
+        "\n",
         "#@markdown ----SEQUENCE LOGO GENERATION----\n",
         "generate_logo = True #@param {type:\"boolean\"}\n",
         "parameters['generate_logo'] = generate_logo\n",
