Update help descriptions

--- a/ProLink.ipynb
+++ b/ProLink.ipynb
@@ -65,7 +65,7 @@
         "\n",
         "parameters = dict()\n",
         "\n",
-        "#@markdown ----QUERY PROTEINS (UNIPROT CODES, COMMA SEPARATED)----\n",
+        "#@markdown ----QUERY PROTEINS (PROTEIN SEQUENCE CODES, COMMA SEPARATED)----\n",
         "query_proteins = \"ABQ62066.1, ABQ62091.1, ABQ62490.1\" #@param {type:\"string\"}\n",
         "query_proteins = query_proteins.replace(' ', '').split(',')\n",
         "\n",
