Add local BLAST for small databases

--- a/ProLink.ipynb
+++ b/ProLink.ipynb
@@ -31,7 +31,7 @@
         "\n",
         "!apt-get update\n",
         "!wget https://www.megasoftware.net/do_force_download/megax-cc_10.2.6-1_amd64.deb\n",
-        "!apt-get install -y ghostscript mash ./megax-cc_10.2.6-1_amd64.deb\n",
+        "!apt-get install -y ghostscript mash ncbi-blast+ ./megax-cc_10.2.6-1_amd64.deb\n",
         "\n",
         "!wget -O /content/muscle https://github.com/rcedgar/muscle/releases/download/v5.1/muscle5.1.linux_intel64\n",
         "!chmod +x /content/muscle\n",
@@ -46,6 +46,13 @@
         "\n",
         "%pip install biopython python-igraph leidenalg weblogo\n",
         "%pip install git+https://github.com/unizar-flav/ProLink.git\n",
+        "\n",
+        "# local BLAST databases\n",
+        "!mkdir -p /content/blast_db\n",
+        "!wget -qO- https://ftp.ncbi.nlm.nih.gov/blast/db/pdbaa.tar.gz | tar -xvz -C /content/blast_db/\n",
+        "!wget -qO- https://ftp.ncbi.nlm.nih.gov/blast/db/landmark.tar.gz | tar -xvz -C /content/blast_db/\n",
+        "os.environ['BLASTDB'] = '/content/blast_db'\n",
+        "blast_db_local = ('pdbaa', 'landmark')\n",
         "\n",
         "import logging\n",
         "from datetime import datetime\n",
@@ -73,8 +80,9 @@
         "hitlist_size = 5000 #@param {type:\"integer\"}\n",
         "parameters['hitlist_size'] = hitlist_size\n",
         "\n",
-        "blast_database = \"Reference Proteins (refseq_protein)\" #@param [\"Non redundant protein sequences (nr)\", \"Reference Proteins (refseq_protein)\", \"Model organisms (landmark)\", \"Protein Data Bank proteins (pdb)\"]\n",
+        "blast_database = \"Reference Proteins (refseq_protein)\" #@param [\"Non redundant protein sequences (nr)\", \"Reference Proteins (refseq_protein)\", \"Model organisms (landmark)\", \"Protein Data Bank proteins (pdbaa)\"]\n",
         "parameters['blast_database'] = blast_database.split('(')[1].split(')')[0] # database name between parenthesis\n",
+        "parameters['blast_local'] = parameters['blast_database'] in blast_db_local\n",
         "\n",
         "pro_blast_ = False #@param {type:\"boolean\"}\n",
         "parameters['pro_blast_'] = pro_blast_\n",
