Add 'expected_min_identity' option to user

--- a/ProLink.ipynb
+++ b/ProLink.ipynb
@@ -93,6 +93,9 @@
         "length_margin = 0.5 #@param {type:\"number\"}\n",
         "parameters['length_margin'] = length_margin\n",
         "\n",
+        "expected_min_identity = 0.25  # @param {type:\"number\"}\n",
+        "parameters['expected_min_identity'] = expected_min_identity\n",
+        "\n",
         "#@markdown ----CLUSTERING----\n",
         "cluster_seqs = True #@param {type:\"boolean\"}\n",
         "parameters['cluster_seqs'] = cluster_seqs\n",
