Change 'similarity' to 'min_seq_id'

--- a/ProLink.ipynb
+++ b/ProLink.ipynb
@@ -97,14 +97,14 @@
         "cluster_seqs = True #@param {type:\"boolean\"}\n",
         "parameters['cluster_seqs'] = cluster_seqs\n",
         "\n",
-        "similarity = 0.6 #@param {type:\"number\"} #Initial similarity treshold to group the sequences into clusters.\n",
-        "parameters['similarity'] = similarity\n",
+        "min_seq_id = 0.6 #@param {type:\"number\"} #Initial minimum sequence identity treshold to group the sequences into clusters.\n",
+        "parameters['min_seq_id'] = min_seq_id\n",
         "\n",
         "pro_clustering_ = True #@param {type:\"boolean\"}\n",
         "parameters['pro_clustering_'] = pro_clustering_\n",
         "\n",
-        "similarity_step = 0.02 #@param {type:\"number\"} #Step to increase or decrease the similarity threshold\n",
-        "parameters['similarity_step'] = similarity_step\n",
+        "min_seq_id_step = 0.02 #@param {type:\"number\"} #Step to increase or decrease the minimum sequence identity threshold\n",
+        "parameters['min_seq_id_step'] = min_seq_id_step\n",
         "\n",
         "min_number_of_clusters_to_cluster_again = 50 #@param {type:\"integer\"}\n",
         "parameters['min_number_of_clusters_to_cluster_again'] = min_number_of_clusters_to_cluster_again\n",
