--- a/ProLink.ipynb
+++ b/ProLink.ipynb
@@ -41,7 +41,7 @@
         "!tar -xzf mmseqs-linux-avx2.tar.gz\n",
         "os.environ['PATH'] += \":/content/mmseqs/bin\"\n",
         "\n",
-        "%pip install biopython python-igraph leidenalg weblogo\n",
+        "%pip install --no-deps \"clipkit<2\"      # v2 requires a higher version of numpy than the installed by Google Colab\n",
         "%pip install git+https://github.com/unizar-flav/ProLink.git\n",
         "\n",
         "# local BLAST databases\n",
