--- a/ProLink.ipynb
+++ b/ProLink.ipynb
@@ -85,7 +85,7 @@
         "parameters['pro_blast_'] = pro_blast_\n",
         "\n",
         "length_restrict = False #@param {type:\"boolean\"}\n",
-        "parameters['restrict_length'] = length_restrict\n",
+        "parameters['length_restrict'] = length_restrict\n",
         "\n",
         "length_margin = 0.5 #@param {type:\"number\"}\n",
         "parameters['length_margin'] = length_margin\n",
