Update MMseqs2 version dependency

--- a/ProLink.ipynb
+++ b/ProLink.ipynb
@@ -37,8 +37,7 @@
         "!chmod +x /content/muscle\n",
         "os.environ['PATH'] += \":/content\"\n",
         "\n",
-        "!wget https://github.com/soedinglab/MMseqs2/releases/download/14-7e284/mmseqs-linux-avx2.tar.gz\n",
-        "!tar -xzf mmseqs-linux-avx2.tar.gz\n",
+        "!wget -qO- https://github.com/soedinglab/MMseqs2/releases/download/15-6f452/mmseqs-linux-avx2.tar.gz | tar -xvz\n",
         "os.environ['PATH'] += \":/content/mmseqs/bin\"\n",
         "\n",
         "%pip install git+https://github.com/unizar-flav/ProLink.git\n",
