--- a/ProLink.ipynb
+++ b/ProLink.ipynb
@@ -8,11 +8,9 @@
         " \n",
         "#<font color='yellow'>***/***</font> ***ProLink*** <font color='yellow'>***/***</font>  \n",
         "\n",
-        "2022 @ *Universidad de Zaragoza*\n",
+        "2022-2024 @ *Universidad de Zaragoza*\n",
         "\n",
-        "For more information please visit https://github.com/unizar-flav/ProLink\n",
-        "\n",
-        "\n"
+        "For more information please visit https://github.com/unizar-flav/ProLink\n"
       ]
     },
     {
@@ -52,7 +50,7 @@
         "import logging\n",
         "from datetime import datetime\n",
         "from google.colab import files\n",
-        "from ProLink import pro_link"
+        "from ProLink import pro_link, pro_link_multiple"
       ]
     },
     {
@@ -151,25 +149,26 @@
         "\n",
         "extra_verbose = False #@param {type:\"boolean\"}\n",
         "\n",
+        "# outputs directory\n",
         "now = datetime.now().strftime(\"%Y%m%d-%H.%M.%S\")\n",
         "outputs_dir = f\"outputs_{now}\"\n",
         "outputs_zip = f\"ProLink_{outputs_dir}.zip\"\n",
-        "parameters['outputs_dir'] = outputs_dir\n",
+        "os.makedirs(f'/content/{outputs_dir}', exist_ok=True)\n",
+        "os.chdir(f'/content/{outputs_dir}')\n",
         "\n",
         "# re-configure logging to override colab settings\n",
-        "os.makedirs(outputs_dir, exist_ok=True)\n",
         "logging.basicConfig(\n",
         "    level = logging.DEBUG if extra_verbose else logging.INFO,\n",
         "    format = '%(message)s',\n",
         "    handlers = [\n",
-        "        logging.FileHandler(f'{outputs_dir}/ProLink.log', mode='w'),\n",
+        "        logging.FileHandler(f'ProLink.log', mode='w'),\n",
         "        logging.StreamHandler()\n",
         "        ],\n",
         "    force = True\n",
         "    )\n",
         "\n",
         "# main script\n",
-        "pro_link(query_proteins, **parameters)"
+        "pro_link_multiple(query_proteins, **parameters)"
       ]
     },
     {
@@ -183,7 +182,7 @@
         "#@title Download outputs\n",
         "#@markdown Run the cell to download the results as a zip\n",
         "\n",
-        "!zip -r $outputs_zip $outputs_dir\n",
+        "!zip -r $outputs_zip /content/$outputs_dir\n",
         "files.download(outputs_zip)"
       ]
     }
