--- a/ProLink.ipynb
+++ b/ProLink.ipynb
@@ -182,8 +182,8 @@
         "#@title Download outputs\n",
         "#@markdown Run the cell to download the results as a zip\n",
         "\n",
-        "!zip -r $outputs_zip /content/$outputs_dir\n",
-        "files.download(outputs_zip)"
+        "!zip -r ../$outputs_zip *\n",
+        "files.download(f\"../{outputs_zip}\")"
       ]
     }
   ],
